cluster/apps/charts/linkwarden/linkwarden-deployment.yaml

# https://github.com/linkwarden/linkwarden/blob/main/docker-compose.yml
# https://github.com/linkwarden/linkwarden/blob/main/.env.sample

--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkwarden
  name: linkwarden
#  namespace: linkwarden
spec:
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
        app.kubernetes.io/name: linkwarden # required for Homepage
    spec:
      containers:
        - name: linkwarden
          # https://github.com/linkwarden/linkwarden/pkgs/container/linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.13.5 # v2.13.5 as at 20260120
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: linkwarden-http
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1000Mi
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          livenessProbe:
            httpGet:
              path: /
              port: linkwarden-http
          readinessProbe:
            httpGet:
             path: /
             port: linkwarden-http
          startupProbe:
            httpGet:
              path: /
              port: linkwarden-http
            failureThreshold: 30
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/data
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data-pvc
--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkwarden
  name: meilisearch
#  namespace: linkwarden
spec:
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
        app.kubernetes.io/name: linkwarden # required for Homepage
    spec:
      containers:
        - name: meilisearch
          # https://hub.docker.com/r/getmeili/meilisearch/tags
          image: getmeili/meilisearch:v1.12.8 # v1.12.8 as at 20260120
          imagePullPolicy: Always
          ports:
            - containerPort: 7700
              name: meilisearch
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1000Mi
            limits:
              cpu: "2000m"
              memory: "2000Mi"
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: linkwarden-http
          # readinessProbe:
          #   httpGet:
          #    path: /
          #    port: linkwarden-http
          # startupProbe:
          #   httpGet:
          #     path: /
          #     port: linkwarden-http
          #   failureThreshold: 30
          volumeMounts:
            - name: meilisearch-data
              mountPath: /meili_data
        
      volumes:
        - name: meilisearch-data
          persistentVolumeClaim:
            claimName: meilisearch-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-http-svc
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: linkwarden-http
  selector:
    app: linkwarden
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  ports:
    - name: http
      port: 7700
      protocol: TCP
      targetPort: meilisearch
  selector:
    app: linkwarden
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #acme.cert-manager.io/http01-ingress-class: nginx-external
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    #acme.cert-manager.io/http01-ingress-class: "nginx-external"
    #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    #nginx.org/ssl-services: "tvheadend-http-svc"
    nginx.org/websocket-services: "linkwarden-http-svc"        
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600" 
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # allow uploads (aka backups) of up to 100MB
    gethomepage.dev/description: Collaborative bookmark manager, to collect, read, annotate and fully preserve
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Lifestyle
    gethomepage.dev/icon: https://github.com/linkwarden/linkwarden/blob/c7ab7678722fb5d62003123efebe59d8d9da1736/assets/logo.png
    gethomepage.dev/name: Linkwarden

  name: linkwarden
spec:
  rules:
    - host: linkwarden.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: linkwarden-http-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - linkwarden.rockyroad.rocks
      secretName: linkwarden-tls
---
